fixed the overflowing content issue

--- a/src/css/profilemodal.css
+++ b/src/css/profilemodal.css
@@ -11,7 +11,6 @@
 
 .modal-container{
   width: 20rem;
-  height: 30rem;
   border-radius: 0.3rem;
   box-shadow: rgba(0,0,0,0.35) 0px 5px 15px;
   display: flex;
